--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
        <link rel="preconnect" href="https://fonts.googleapis.com">
        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+       <link rel="stylesheet" href="styles.css">
        
 </head>
-<body>
+<body class="press-start">
        
 </body>
 </html>
