--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
        <h1 class="title">PONG</h1>
+       <span class="score player1score" id="player1score"> player 1 </span>
 
        
        
