--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
        <h1 class="title">PONG</h1>
        <span class="score player1score" id="player1score"> player 1 </span>
+       <span class="score player2score" id="player2score"> player 2 </span>
+       <h3 class="startText" id="startText">Press any key to start the game </h3>
 
        
        
