--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
        <span class="score player1score" id="player1score"> player 1 </span>
        <span class="score player2score" id="player2score"> player 2 </span>
        <h3 class="startText" id="startText">Press any key to start the game </h3>
+       <div class="gameArea">
+              <div id="paddle1 class=paddle1 paddle">
+
+              </div>
+              <div id="paddle2" class="paddle2 paddle">
+                     <div id="ball" class="ball"></div>
+                     <div class="net"></div>
+
+              </div>
+       </div>
 
        
        
