--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 
               </div>
        </div>
-       <img src="" alt="">
+       <img src="/assets/machine.png" alt="Arcade pong machine" class="bg">
+       <div class="vignette"></div>
 
        
        
