--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
        </div>
        <img src="/assets/machine.png" alt="Arcade pong machine" class="bg">
        <div class="vignette"></div>
+       <audio src="/assets/paddle.wav " id="paddleSound"></audio>
+       <audio src="/assets/wall.wav" id="wallSound"></audio>
+       <audio src="/assets/loss.wav" id="lossSound"></audio>
 
        
        
