--- a/index.html
+++ b/index.html
@@ -17,18 +17,14 @@
        <span class="score player2score" id="player2score"> player 2 </span>
        <h3 class="startText" id="startText">Press any key to start the game </h3>
        <div class="gameArea">
-              <div id="paddle1 class=paddle1 paddle">
-
-              </div>
-              <div id="paddle2" class="paddle2 paddle">
-                     <div id="ball" class="ball"></div>
-                     <div class="net"></div>
-
-              </div>
+              <div id="paddle1" class="paddle1 paddle"></div>
+              <div id="paddle2" class="paddle2 paddle"></div>
+              <div id="ball" class="ball"></div>
+              <div class="net"></div>
        </div>
        <img src="/assets/machine.png" alt="Arcade pong machine" class="bg">
        <div class="vignette"></div>
-       <audio src="/assets/paddle.wav " id="paddleSound"></audio>
+       <audio src="/assets/paddle.wav" id="paddleSound"></audio>
        <audio src="/assets/wall.wav" id="wallSound"></audio>
        <audio src="/assets/loss.wav" id="lossSound"></audio>
 
