--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
               <div id="ball" class="ball"></div>
               <div class="net"></div>
        </div>
-       <img src="/assets/machine.png" alt="Arcade pong machine" class="bg">
+       <img src="assets/machine.png" alt="Arcade pong machine" class="bg">
        <div class="vignette"></div>
-       <audio src="/assets/paddle.wav" id="paddleSound"></audio>
-       <audio src="/assets/wall.wav" id="wallSound"></audio>
-       <audio src="/assets/loss.wav" id="lossSound"></audio>
+       <audio src="assets/paddle.wav" id="paddleSound"></audio>
+       <audio src="assets/wall.wav" id="wallSound"></audio>
+       <audio src="assets/loss.wav" id="lossSound"></audio>
 
        
        
