--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
        <h1 class="title">PONG</h1>
-       <span class="score player1score" id="player1score"> player 1 </span>
-       <span class="score player2score" id="player2score"> player 2 </span>
+       <span class="score player1score" id="player1score">0</span>
+       <span class="score player2score" id="player2score">0</span>
        <h3 class="startText" id="startText">Press any key to start the game </h3>
        <div class="gameArea">
               <div id="paddle1" class="paddle1 paddle"></div>
